--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>项目人员管理系统</title>
+    <title>任务管理系统</title>
     <meta name="description" content="这是一个 index 页面">
     <meta name="keywords" content="index">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -1050,7 +1050,7 @@
             // data: {"loadId": loadId},
             // dataType: "html",
             success: function (message) {
-                window.location.href = "/";
+                window.location.href = "/loginView";
             },
             error: function (message) {
                 console.log(+message);
