--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>登陆</title>
-    <meta name="description" content="这是一个 index 页面">
+    <meta name="description" content="这是一个 login 页面">
     <meta name="keywords" content="index">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="renderer" content="webkit">
@@ -43,7 +43,7 @@
                     <img src="assets/img/wondersLOGO.jpg" style="width: 300px">
                 </div>
                 <div align="center" style="font-size: 27px;color: #0c7cb5">
-                    项目管理系统
+                    任务管理系统
                 </div>
 
 
